# site2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  output.md  pyproject.toml  pytest.ini
ai-agents/: AGENT_CONTEXT.md  AI-CODING-CONTEXT.md  PROJECT_STATUS.md  ai-agent-instructions.md  common.md  todos.md
ai-agents/histories/: 20250705_initial-chat.md
ai-agents/prompts/: excecute-task2-prompt.md  execute-task-8-10-prompt.md  execute-task17-prompt.md  execute-task18-prompt.md  execute-task19-prompt.md  execute_task01.md  execute_task02.5.md  execute_task04.md  execute_task20.md  execute_task21.md  execute_task22.md  execute_task23.md  execute_task24.md
ai-agents/reports/: task03.md  task04,25-26.md  task20.md  task21.md  task23.md  task27.md
ai-agents/roles/: agent-roles-config.md
ai-agents/todos/: 20250705-01-設計の作成.md  20250706-01-complete-design-docs.md  20250706-02-common-infrastructure.md  20250706-02-ディレクトリ構造の構築.md  20250706-03-implement-fetch-service.md  20250706-04-implement-html-parser.md  20250706-05-implement-detect-main.md  20250706-06-implement-detect-nav.md  20250706-07-implement-detect-order.md  20250706-08-implement-markdown-converter.md  20250706-09-implement-pdf-converter.md  20250706-10-implement-build-service.md  20250711-17-migrate-to-pydantic.md  20250711-18-domain-events-test-task.md  20250712-19-migrate-contracts-to-pydantic.md  (+17 more)
contracts/: cli-contract.yaml
docs/: TOC.md
features/: fetch_senarios.feature
scripts/: prepare_test_fixtures.py  prepare_test_fixtures.sh  run_tests.sh
tests/: conftest.py  pipline.feature
(+164 files in other folders)
