[project]
name = "site2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Uehara Masato", email = "masato.uehara.1975@gmail.com" }
]
dependencies = [
    "typer>=0.16.0",
    "playwright>=1.53.0",
    "beautifulsoup4>=4.13.4",
    "pypdf>=5.7.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "pre-commit>=4.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/site2"]
